--- a/assets/styles/frontend/common/core/variables.less
+++ b/assets/styles/frontend/common/core/variables.less
@@ -226,6 +226,7 @@
 @color-red: #d53030;
 @color-gray: #85949f;
 @color-orange: #ffa500;
+@color-yellow: #fffac6;
 
 //// Context colors
 ////// Base color of text
