--- a/assets/styles/frontend/common/components/list/cart-preview.less
+++ b/assets/styles/frontend/common/components/list/cart-preview.less
@@ -10,7 +10,12 @@
     flex-direction: column;
 
     &__title {
-        margin-bottom: 10px;
+        margin: 20px 0 10px;
+        line-height: 20px;
+
+        font-size: 16px;
+        font-weight: 700;
+        text-transform: uppercase;
     }
 
     &__item {
