--- a/templates/Front/Form/theme.html.twig
+++ b/templates/Front/Form/theme.html.twig
@@ -35,7 +35,7 @@
 {% endblock form_end %}
 
 {% block form_row %}
-    <div class="{{ rowClass|default('form-line') }}">
+    <div class="{{ rowClass|default('form-line') }} js-form-line">
         <div class="form-line__input {{ inputModificationClass|default('') }}">
             {{ form_label(form, label, { withoutColon: true }) }}
             {{ form_widget(form) }}
