--- a/templates/Front/Content/Order/transportAndPaymentBox.html.twig
+++ b/templates/Front/Content/Order/transportAndPaymentBox.html.twig
@@ -29,6 +29,9 @@
                     </span>
                     <span class="box-chooser__item__content">
                         <span class="box-chooser__item__title">
+                            {% if imageExists(choice.data) %}
+                                {{ image(choice.data, { lazy: false }) }}
+                            {% endif %}
                             {{ choice.data.name }}
                         </span>
 
@@ -74,7 +77,7 @@
                 <div class="box-chooser__more js-toggle-additional-transports">
                     <p class="box-chooser__more__text">
                         <span class="box-chooser__more__text__show">{{ 'Zobrazit další způsoby dopravy'|trans }}</span>
-                        <span class="box-chooser__more__text__hide">{{ 'Skrýt další způsoby dopravy'|trans }}</span>    
+                        <span class="box-chooser__more__text__hide">{{ 'Skrýt další způsoby dopravy'|trans }}</span>
                     </p>
                     <i class="svg svg-triangle"></i>
                 </div>
@@ -108,6 +111,9 @@
                     </span>
                     <span class="box-chooser__item__content">
                         <span class="box-chooser__item__title">
+                            {% if imageExists(choice.data) %}
+                                {{ image(choice.data, { lazy: false }) }}
+                            {% endif %}
                             {{ choice.data.name }}
                         </span>
                         {% if choice.data.description %}
