--- a/assets/styles/frontend/common/components/in/availability.less
+++ b/assets/styles/frontend/common/components/in/availability.less
@@ -75,7 +75,7 @@
             font-size: @font-size;
         }
 
-        .list-article-product & {
+        .list-article-product &, .list-cart-preview & {
             justify-content: flex-end;
             text-align: right;
 
@@ -92,7 +92,7 @@
             font-weight: 700;
         }
 
-        .list-article-product & {
+        .list-article-product &, .list-cart-preview & {
             font-size: @font-size-small;
             font-weight: 400;
         }
