--- a/templates/Front/Content/Order/transportAndPaymentBox.html.twig
+++ b/templates/Front/Content/Order/transportAndPaymentBox.html.twig
@@ -17,10 +17,11 @@
             {% for child in form.transport %}
                 {% set choice = form.transport.vars.choices[child.vars.name] %}
                 {% set transportPrice = transportsPrices[choice.data.id] %}
+                {% set oversizedDisabled = (bulkyTransportRequired and not choice.data.bulkyAllowed) or (oversizedTransportRequired and not choice.data.oversizedAllowed) %}
                 <label class="box-chooser__item js-order-transport{% if loop.index > 3 %} js-additional-transport display-none{% endif %}">
                     <span class="box-chooser__item__check">
                         {{ form_widget(child, { attr: {
-                            class: 'css-radio js-order-transport-input',
+                            class: 'css-radio js-order-transport-input' ~ (oversizedDisabled ? ' js-oversized-disabled' : ''),
                             'data-id': choice.data.id,
                             'data-transport-pickup': choice.data.pickupPlace,
                             'data-choose-store': choice.data.chooseStore
@@ -35,14 +36,14 @@
                         </span>
                         <span class="box-chooser__item__title">
                             {{ choice.data.name }}
-                        
+
                             {% if choice.data.description %}
                                 <span class="box-chooser__item__description">
                                     {{ choice.data.description }}
                                 </span>
                             {% endif %}
                         </span>
-                        
+
                         {% if choice.data.isPickupPlace() or choice.data.isChooseStore() %}
                             {% set checked = child.vars.checked == true %}
                             {% set pickupPlaceName = '' %}
