--- a/assets/styles/frontend/common/components/box/chooser.less
+++ b/assets/styles/frontend/common/components/box/chooser.less
@@ -1,4 +1,7 @@
 @box-chooser-item-padding: 20px;
+@box-chooser-item-padding-small: 15px 10px;
+@box-chooser-item-gap: 10px;
+@box-chooser-item-gap-small: 5px;
 
 @box-chooser-check-width: 20px;
 @box-chooser-image-width: 40px;
@@ -25,12 +28,16 @@
         display: flex;
         align-items: center;
         width: 100%;
-        padding: @box-chooser-item-padding;
+        padding: @box-chooser-item-padding-small;
         margin-bottom: 5px;
         
         background-color: @color-f;
         border-radius: 4px;
         cursor: pointer;
+
+        @media @query-lg {
+            padding: @box-chooser-item-padding;
+        }
 
         &--inactive {
             cursor: no-drop;
@@ -45,8 +52,12 @@
         &__image {
             height: @box-chooser-image-height;
             width: @box-chooser-image-width;
-            margin-right: 10px;
+            margin-right: @box-chooser-item-gap-small;
             position: relative;
+
+            @media @query-lg {
+                margin-right: @box-chooser-item-gap;
+            }
 
             img {
                 .center-image();
@@ -55,15 +66,21 @@
 
         &__content {
             display: flex;
+            align-items: center;
             width: calc(~"@{calc-base} - @{box-choose-item-check-width}");
         }
 
         &__title {
-            padding-right: 10px;
+            flex: 1;
+            padding-right: @box-chooser-item-gap-small;
             line-height: @box-chooser-text-line-height;
 
             font-size: 15px;
             font-weight: 400;
+
+            @media @query-lg {
+                padding-right: @box-chooser-item-gap;
+            }
 
             .box-chooser__item--active & {
                 font-weight: 800;
@@ -75,13 +92,17 @@
         }
 
         &__description {
+            display: block;
             line-height: @box-chooser-text-line-height;
-            padding-right: 10px;
             opacity: 0.5;
 
             color: @box-chooser-description-color;
             font-size: @font-size-extra-small;
             font-family: @font-alt;
+
+            @media @query-lg {
+                display: inline;
+            }
         }
 
         &__pickup-button {
@@ -90,7 +111,6 @@
 
         &__price {
             width: @box-chooser-price-width;
-            padding-left: 10px;
             margin-left: 0;
             text-align: right;
 
