--- a/assets/styles/frontend/common/components/box/preview.less
+++ b/assets/styles/frontend/common/components/box/preview.less
@@ -108,6 +108,8 @@
                 }
 
                 &:focus {
+                    padding-top: 0;
+                    
                     border: 0;
                 }
             }
