[TF-553] Import order status from Pohoda

--- a/templates/Component/Transfer/Pohoda/Order/orders.xml.twig
+++ b/templates/Component/Transfer/Pohoda/Order/orders.xml.twig
@@ -110,7 +110,7 @@
                                 <typ:ids>DopravaTyp</typ:ids>
                             </typ:list>
                         </typ:parameter>
-                    {% endif %}
+                    {% endif -%}
                 </ord:parameters>
             </ord:orderHeader>
 
