--- a/templates/Front/Content/Product/productSetViewMacro.html.twig
+++ b/templates/Front/Content/Product/productSetViewMacro.html.twig
@@ -22,6 +22,11 @@
                                     <a href="{{ productView.action.detailUrl }}" class="list-products-set__item">
                                         <div class="list-products-set__item__image">
                                             {{ image(groupItem.image, {size: 'listSet', alt: groupItem.name, lazy: true}) }}
+                                            {% if groupItem.amount > 1 %}
+                                                <div class="list-tags">
+                                                    <div class="list-tags__tag">{{ groupItem.amount ~ '×' }}</div>
+                                                </div>
+                                            {% endif %}
                                         </div>
                                         <div class="list-products-set__item__info">
                                             {{ groupItem.name }}
