--- a/assets/styles/frontend/common/components/in/availability.less
+++ b/assets/styles/frontend/common/components/in/availability.less
@@ -75,11 +75,19 @@
             font-size: @font-size;
         }
 
-        .list-article-product &, .list-cart-preview & {
+        .list-article-product & {
             justify-content: flex-end;
             text-align: right;
 
             font-size: @font-size-small;
+            font-weight: 400;
+        }
+
+        .list-cart-preview & {
+            justify-content: flex-end;
+            text-align: right;
+
+            font-size: @font-size-extra-small;
             font-weight: 400;
         }
     }
@@ -92,8 +100,13 @@
             font-weight: 700;
         }
 
-        .list-article-product &, .list-cart-preview & {
+        .list-article-product & {
             font-size: @font-size-small;
+            font-weight: 400;
+        }
+
+        .list-cart-preview & {
+            font-size: @font-size-extra-small;
             font-weight: 400;
         }
 
