--- a/templates/Front/Content/Order/noticeRegistered.html.twig
+++ b/templates/Front/Content/Order/noticeRegistered.html.twig
@@ -4,5 +4,5 @@
     data-url="{{ url('front_login_window_form') }}"
     data-email="{{ email }}"
 >
-    {{ 'Tento e-mail je registrován. Můžete se přihlásit'|trans }}
+    {{ 'Tento e-mail je registrován. Můžete se <span>přihlásit</span>'|trans|raw }}
 </a>
