--- a/assets/styles/frontend/common/components/box/order.less
+++ b/assets/styles/frontend/common/components/box/order.less
@@ -217,7 +217,7 @@
 
             border-radius: @radius;
             background-color: @color-yellow;
-            font-size: @font-size-extra-small;
+            font-size: @font-size-extra-small + 1px;
             font-family: @font-alt;
             text-decoration: none;
             transition: @transition;
@@ -228,6 +228,10 @@
                     background-color: darken(@color-yellow, 10%);
                     color: @box-order-registration-message-color;
                 }
+            }
+
+            span {
+                text-decoration: underline;
             }
         }
     }
