--- a/assets/styles/frontend/common/components/list/cart-preview.less
+++ b/assets/styles/frontend/common/components/list/cart-preview.less
@@ -84,8 +84,12 @@
             line-height: 18px;
 
             color: @color-base;
-            font-size: @font-size-small;
+            font-size: @font-size-mobile;
             font-weight: 700;
+
+            @media @query-lg {
+                font-size: @font-size-small;
+            }
 
             &__old {
                 padding-left: 5px;
