--- a/templates/Front/Inline/Cart/afterAddWindow.html.twig
+++ b/templates/Front/Inline/Cart/afterAddWindow.html.twig
@@ -3,8 +3,9 @@
     <div class="box-popup-add__content">
         <div class="box-popup-add__content__title">
             <span class="box-popup-add__content__title__text double-lined">
-                {{ 'Do košíku přidáno %quantity%&nbsp;ks<br>celkem za %price%'|transHtml({
+                {{ 'Do košíku přidáno %quantity%&nbsp;%unit%<br>celkem za %price%'|transHtml({
                     '%quantity%': addedQuantity|formatNumber,
+                    '%unit%': addedUnit.name,
                     '%price%': addedPrice|price
                 }) }}
             </span>
