--- a/templates/Front/Content/Category/hoverMenu.html.twig
+++ b/templates/Front/Content/Category/hoverMenu.html.twig
@@ -1,26 +1,26 @@
-{% macro rightContent(categoriesWithLazyLoadedVisibleChildren, modificationClass = '', dropdownMenu, showImage, children, isSaleCategoryChild) %}
+{% macro rightContent(categoriesWithLazyLoadedVisibleChildren, modificationClass = '', dropdownMenu, showImage, children, isSaleCategoryChild, parentCategoryId) %}
     {% if categoriesWithLazyLoadedVisibleChildren|length > 0 %}
         <ul class="{% if not children %}list-menu{% else %}list-menu__submenu{% endif %} {{ modificationClass }}">
             {% for categoryWithLazyLoadedVisibleChildren in categoriesWithLazyLoadedVisibleChildren %}
                 {% if not categoryWithLazyLoadedVisibleChildren.category.saleType and not categoryWithLazyLoadedVisibleChildren.category.newsType %}
-                    {{ _self.mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loop.index, loop.length, isSaleCategoryChild) }}
+                    {{ _self.mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loop.index, loop.length, isSaleCategoryChild, parentCategoryId) }}
                 {% endif %}
             {% endfor %}
             {% for categoryWithLazyLoadedVisibleChildren in categoriesWithLazyLoadedVisibleChildren %}
                 {% if categoryWithLazyLoadedVisibleChildren.category.newsType %}
-                    {{ _self.mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loop.index, loop.length, isSaleCategoryChild) }}
+                    {{ _self.mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loop.index, loop.length, isSaleCategoryChild, parentCategoryId) }}
                 {% endif %}
             {% endfor %}
             {% for categoryWithLazyLoadedVisibleChildren in categoriesWithLazyLoadedVisibleChildren %}
                 {% if categoryWithLazyLoadedVisibleChildren.category.saleType %}
-                    {{ _self.mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loop.index, loop.length, isSaleCategoryChild) }}
+                    {{ _self.mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loop.index, loop.length, isSaleCategoryChild, parentCategoryId) }}
                 {% endif %}
             {% endfor %}
         </ul>
     {% endif %}
 {% endmacro %}
 
-{% macro mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loopIndex, loopLength, isSaleCategoryChild) %}
+{% macro mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loopIndex, loopLength, isSaleCategoryChild, parentCategoryId) %}
     {% set category = categoryWithLazyLoadedVisibleChildren.category %}
     {% set hasChildren = category.hasChildren or category.saleType %}
     {% if isSaleCategoryChild %}
@@ -42,7 +42,7 @@
             </div>
             {% if hasChildren and (category.saleType is same as (false) or showImage is same as (true)) %}
                 <div class="list-menu__item__options">
-                    {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, '', false, showImage, true, category.saleType) }}
+                    {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, '', false, showImage, true, category.saleType, category.id) }}
                 </div>
             {% endif %}
         </li>
@@ -60,13 +60,13 @@
                         {{ category.name }}
                     </a>
                     {% if hasChildren and category.level == 2 and not isSaleCategoryChild%}
-                        {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu__submenu--children', false, false, true, category.saleType) }}
+                        {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu__submenu--children', false, false, true, category.saleType, category.id) }}
                     {% endif %}
                 </div>
             </li>
         {% elseif category.level == 3 and loopIndex == 5 %}
             <li class="list-menu__submenu__item">
-                <a class="list-menu__submenu__item__more" href="{{ categoryUrl }}">
+                <a class="list-menu__submenu__item__more" href="{{ url('front_product_list', {id: parentCategoryId}) }}">
                     {{ 'a další kategorie'|transchoice(loopLength - 4, {'count': loopLength}) }}
                 </a>
             </li>
@@ -74,4 +74,4 @@
     {% endif %}
 {% endmacro %}
 
-{{ _self.rightContent(categoriesWithLazyLoadedVisibleChildren, '', dropdownMenu, showImage, children, false) }}
+{{ _self.rightContent(categoriesWithLazyLoadedVisibleChildren, '', dropdownMenu, showImage, children, false, 0) }}
