--- a/assets/styles/admin/todo.less
+++ b/assets/styles/admin/todo.less
@@ -31,12 +31,13 @@ input[disabled], textarea[disabled] {
     background-color: lightgrey;
 }
 
-//TODO KOD: TF-79 https://shopsys.atlassian.net/browse/TF-79
-.list-products__item__set {
-    border: 5px solid red;
-}
-
 // see https://github.com/shopsys/shopsys/issues/1882
 .in-domain {
     flex-wrap: wrap;
+}
+
+//TODO KOD: https://shopsys.atlassian.net/browse/TF-211
+.form-price-heading__cell--action {
+    width: 320px;
+    height: 1px;
 }
