[TF-408] Show order discount and promo codes in order with percentage
- added SP (slevový program) for promo codes and BP (bonusový program) for discount

--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -93,7 +93,7 @@
                     {% if orderPreview.activeOrderDiscountLevel is not null %}
                         <tr class="table-cart-preview__row">
                             <td class="table-cart-preview__cell">
-                                {{ 'Sleva na celý nákup %percent% %'|trans({'%percent%': orderPreview.activeOrderDiscountLevel.discountPercent}) }}
+                                {{ 'Sleva %percent% (BP)'|trans({'%percent%': orderPreview.activeOrderDiscountLevel.discountPercent|formatPercent}) }}
                             </td>
                             <td class="table-cart-preview__cell table-cart-preview__cell--price  table-cart-preview__cell--important">
                                 -&nbsp;{{ orderPreview.totalDiscount.priceWithVat|price }}
@@ -107,7 +107,7 @@
                             <tr class="table-cart-preview__row">
                                 <td class="table-cart-preview__cell">
                                     {{ 'Sleva'|trans }}
-                                    <span class="next-line"></span> {{ '(kód %code%)'|trans({ '%code%': promoCode.code }) }}
+                                    <span class="next-line"></span> {{ '%code% -%percent% (SP)'|trans({ '%code%': promoCode.code, '%percent%': promoCode.percent|formatPercent }) }}
                                 </td>
                                 <td class="table-cart-preview__cell table-cart-preview__cell--price  table-cart-preview__cell--important">
                                     -&nbsp;{{ orderPreview.getTotalItemDiscountsIndexedByPromoCodeId[promoCodeId].priceWithVat|price }}
